updated to run matlab and external exe